--- a/VslViagens/src/main/webapp/cadastroCliente.html
+++ b/VslViagens/src/main/webapp/cadastroCliente.html
@@ -21,22 +21,143 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="styles.css" />
 
-    <title>Vsl Viagens - PDV</title>
 
     <style>
-		.teladireita-sistema {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-		}
+	@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap');
+
+
+* {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+      font-family: 'Nunito';
+
+}
+
+body {
+    overflow-x: hidden;
+    min-height: 100vh;
+    background: linear-gradient(45deg, #F3E524,#F2CB04,#F3B806,#ff9d2e);
+    background-size: 250% 250%;
+    animation: fundogradiente 10s ease infinite;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes fundogradiente  {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+
+}
+	
+		main { 
+    display: flex;
+    border-radius: 10px;
+    justify-content: space-between;
+    width: 90%;   
+    height: 80vh;
+    background-color: #ffffff;
+}
+
+.container-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo {
+    width: 160px;
+}
+
+.telaesquerda-sistema{
+    display: flex;
+    padding: 30px;
+    width: 25%;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #232323;
+    height: 100%;
+    align-items: center;
+}
+
+.vertical-menu {
+    padding: 0;
+    height: 70%;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+  }
+  
+  .vertical-menu li {
+    color: white;
+    text-align: center;
+  }
+  
+  .vertical-menu li a {
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+    align-content: center;
+    text-decoration: none;
+    color: inherit;
+    padding: 10px;
+
+  }
+
+  .vertical-menu i {
+    margin-right: 9px;
+    font-size: 24px;
+    animation: pulse 1s infinite alternate;
+  }
+  
+  @keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1.1);
+    }
+  }
+ 
+ 
+      .teladireita-sistema {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 75%;
+        align-items: center;
+      }
+
       .form-control {
         padding: 10px;
         margin: 10px 0;
         width: 80%;
-                border: none;
+        height: min-content;
+        border: none;
+      }
 
+      .form-control form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 10px;
+      }
+
+      .form-control legend {
+        font-weight: 600;
+        text-align: center;
       }
 
       label {
@@ -46,25 +167,30 @@
       input[type="text"],
       input[type="email"] {
         width: 100%;
-        padding: 10px;
+        padding: 7px;
         border: 1px solid #ccc;
-        border-radius: 5px;
-        margin: 5px 0;
+        border-radius: 15px;
       }
 
       input[type="submit"] {
+        width: 100px;
+        align-self: center;
         background-color: #232323;
         color: #fff;
-        padding: 10px 20px;
+        padding: 10px 25px;
         border: none;
-        border-radius: 5px;
+        font-weight: 500;
+        border-radius: 10px;
         cursor: pointer;
       }
 
       input[type="submit"]:hover {
-        background-color: #232323;
+        background-color: yellow;
+        color: #232323;
       }
     </style>
+        <title>Vsl Viagens - PDV</title>
+
   </head>
   <body>
     <main>
@@ -75,36 +201,70 @@
 
         <ul class="vertical-menu">
           <li>
-            <a href="#"><i class="fas fa-user"></i> Cadastrar</a>
+            <a href="index.html"><i class="fas fa-home"></i> Home</a>
           </li>
           <li>
-            <a href="#"><i class="fas fa-search"></i> Consultar</a>
+            <a href="cadastroCliente.html"><i class="fas fa-user"></i> Cadastrar</a>
           </li>
           <li>
-            <a href="#"><i class="fas fa-list"></i> Lista Clientes</a>
+            <a href="buscarCliente.html"><i class="fas fa-search"></i> Consultar</a>
           </li>
           <li>
-            <a href="#"><i class="fas fa-shopping-cart"></i> Comprar Passagem</a>
+            <a href="LerClientes"><i class="fas fa-list"></i> Lista Clientes</a>
+          </li>
+          <li>
+            <a href="#"><i class="fas fa-shopping-cart"></i> Destinos</a>
           </li>
         </ul>
       </div>
 
       <section class="teladireita-sistema">
-        <form action="CriarCliente" method="post" class="form-control">
-          <label for="nome">Nome:</label>
-          <input type="text" id="nome" name="nome" required><br><br>
+        <fieldset class="form-control">
+          <legend>Cadastro de Cliente</legend>
+          <form action="CriarCliente" method="post">
+            <label for="nome">Nome</label>
+            <input
+              type="text"
+              id="nome"
+              name="nome"
+              placeholder="Digite seu nome"
+              required
+            />
 
-          <label for="email">E-mail:</label>
-          <input type="email" id="email" name="email" required><br><br>
+            <label for="email">E-mail</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Digite seu e-mail"
+              required
+            />
 
-          <label for="cpf">CPF:</label>
-          <input type="text" id="cpf" name="cpf" required><br><br>
+            <label for="cpf">CPF</label>
+            <input
+              type="text"
+              id="cpf"
+              name="cpf"
+              pattern="\d{11}"
+              title="Digite um cpf válido com 11 dígitos"
+              placeholder="Digite seu CPF"
+              required
+            />
 
-          <label for="cep">CEP:</label>
-          <input type="text" id="cep" name="cep" required><br><br>
+            <label for="cep">CEP</label>
+            <input
+              type="text"
+              id="cep"
+              name="cep"
+              pattern="\d{8}"
+              title="Digite um CEP válido com 8 dígitos"
+              placeholder="Digite seu CEP"
+              required
+            />
 
-          <input type="submit" value="Enviar">
-        </form>
+            <input type="submit" value="Enviar" />
+          </form>
+        </fieldset>
       </section>
     </main>
 
