--- a/VslViagens/src/main/webapp/index.html
+++ b/VslViagens/src/main/webapp/index.html
@@ -21,7 +21,158 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="styles.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap");
+
+      * {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        font-family: "Nunito";
+      }
+
+      body {
+        overflow-x: hidden;
+        min-height: 100vh;
+        background: linear-gradient(45deg, #f3e524, #f2cb04, #f3b806, #ff9d2e);
+        background-size: 250% 250%;
+        animation: fundogradiente 10s ease infinite;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      @keyframes fundogradiente {
+        0% {
+          background-position: 0% 50%;
+        }
+
+        50% {
+          background-position: 100% 50%;
+        }
+
+        100% {
+          background-position: 0% 50%;
+        }
+      }
+      main {
+        display: flex;
+        border-radius: 10px;
+        justify-content: space-between;
+        width: 90%;
+        height: 80vh;
+        background-color: #ffffff;
+      }
+
+      .container-logo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .logo {
+        width: 160px;
+      }
+
+      .telaesquerda-sistema {
+        display: flex;
+        padding: 30px;
+        width: 25%;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: #232323;
+        height: 100%;
+        align-items: center;
+      }
+
+      .vertical-menu {
+        padding: 0;
+        height: 70%;
+        justify-content: space-between;
+        display: flex;
+        flex-direction: column;
+        list-style-type: none;
+      }
+
+      .vertical-menu li {
+        color: white;
+        text-align: center;
+      }
+
+      .vertical-menu li a {
+        display: flex;
+        align-items: center;
+        justify-content: baseline;
+        align-content: center;
+        text-decoration: none;
+        color: inherit;
+        padding: 10px;
+      }
+
+      .vertical-menu i {
+        margin-right: 9px;
+        font-size: 24px;
+        animation: pulse 1s infinite alternate;
+      }
+
+      @keyframes pulse {
+        0% {
+          transform: scale(1);
+        }
+        100% {
+          transform: scale(1.1);
+        }
+      }
+
+      .container-sobre {
+        padding: 20px 0;
+        text-align: center;
+        color: #232323;
+      }
+
+      .container-sobre h3 {
+        font-size: 35px;
+        font-weight: 600;
+      }
+
+      .container-sobre h4 {
+        font-size: 18px;
+        font-weight: 500;
+        font-style: italic;
+      }
+
+      .container-especialidades {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: space-between;
+        gap: 25px;
+      }
+
+      .item-especialidade {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px 0;
+      }
+
+      .item-especialidade i {
+        font-size: 48px;
+        color: #ffc107;
+      }
+
+      .item-especialidade h5 {
+        font-size: 18px;
+      }
+
+      .teladireita-sistema {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 75%;
+      }
+    </style>
 
     <title>Vsl Viagens - PDV</title>
   </head>
@@ -34,18 +185,24 @@
 
         <ul class="vertical-menu">
           <li>
-            <a href="cadastroCliente.html"><i class="fas fa-user"></i> Cadastrar</a>
+            <a href="index.html"><i class="fas fa-home"></i> Home</a>
           </li>
+
           <li>
-            <a href="#"><i class="fas fa-search"></i> Consultar</a>
-          </li>
-          <li>
-            <a href="#"><i class="fas fa-list"></i> Lista Clientes</a>
-          </li>
-          <li>
-            <a href="#"
-              ><i class="fas fa-shopping-cart"></i> Comprar Passagem</a
+            <a href="cadastroCliente.html"
+              ><i class="fas fa-user"></i> Cadastrar</a
             >
+          </li>
+          <li>
+            <a href="buscarCliente.html"
+              ><i class="fas fa-search"></i> Consultar</a
+            >
+          </li>
+          <li>
+            <a href="LerClientes"><i class="fas fa-list"></i> Lista Clientes</a>
+          </li>
+          <li>
+            <a href="#"><i class="fas fa-shopping-cart"></i> Destinos</a>
           </li>
         </ul>
       </div>
@@ -81,3 +238,4 @@
     ></script>
   </body>
 </html>
+
